--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@firebase/performance": "^0.2.12",
     "@gitgraph/js": "^1.3.0",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
