--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "facebook-login-vuejs": "^2.1.3",
     "firebase": "^5.9.3",
+    "firebase-admin": "^8.3.0",
     "gitgraph": "0.0.1",
     "md5": "^2.2.1",
     "register-service-worker": "^1.6.2",
