--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue-simplemde": "^0.5.2",
     "vuetify": "^1.5.5",
     "vuetify-markdown-editor": "^0.4.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
