--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.6.10",
     "vue-facebook-login-component": "^1.3.5",
     "vue-gravatar": "^1.3.0",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.1",
     "vue-simplemde": "^0.5.2",
     "vuetify": "^1.5.5",
