--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.10.1",
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-plugin-eslint": "^3.9.0",
     "@vue/cli-plugin-pwa": "^3.0.4",
